# webull-mcp-server

./: .env.example  .gitignore  DISCLAIMER.md  README.md  pyproject.toml
.github/workflows/: pypi-ci.yml
tests/: __init__.py  test_account_tools.py  test_audit.py  test_cli.py  test_config.py  test_errors.py  test_formatters.py  test_guards.py  test_property_audit.py  test_property_config.py  test_property_formatters.py  test_property_guards.py  test_property_sdk.py  test_property_server.py  test_sdk_client.py  test_stock_order_tools.py
webull_openapi_mcp/: __init__.py  __main__.py  audit.py  cli.py  config.py  constants.py  errors.py  formatters.py  guards.py  region_config.py  sdk_client.py  server.py
webull_openapi_mcp/tools/: __init__.py
webull_openapi_mcp/tools/market_data/: __init__.py  crypto.py  event.py  futures.py  stock.py
webull_openapi_mcp/tools/trading/: __init__.py  account.py  assets.py  crypto_order.py  event_order.py  futures_order.py  instrument.py  option_order.py  order.py  stock_order.py
